--- a/app.json
+++ b/app.json
@@ -3,7 +3,6 @@
     "name": "digital-energy-mobile",
     "slug": "digital-energy-mobile",
     "version": "1.0.0",
-
     "scheme": "digital-energy-mobile",
     "web": {
       "bundler": "metro",
@@ -17,19 +16,27 @@
         {
           "launchMode": "most-recent"
         }
+      ],
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "/assets/fonts/Satoshi-Black.otf",
+            "/assets/fonts/Satoshi-Bold.otf",
+            "/assets/fonts/Satoshi-Light.otf",
+            "assets/fonts/Satoshi-Medium.otf",
+            "assets/fonts/Satoshi-Regular.otf"
+          ]
+        }
       ]
     ],
     "experiments": {
       "typedRoutes": true,
-
       "tsconfigPaths": true
     },
-
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-
     "userInterfaceStyle": "light",
-
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
