added blank readme.md file

--- a/app.json
+++ b/app.json
@@ -21,11 +21,11 @@
         "expo-font",
         {
           "fonts": [
-            "/assets/fonts/Satoshi-Black.otf",
-            "/assets/fonts/Satoshi-Bold.otf",
-            "/assets/fonts/Satoshi-Light.otf",
-            "assets/fonts/Satoshi-Medium.otf",
-            "assets/fonts/Satoshi-Regular.otf"
+            "./assets/fonts/Satoshi-Black.otf",
+            "./assets/fonts/Satoshi-Bold.otf",
+            "./assets/fonts/Satoshi-Light.otf",
+            "./assets/fonts/Satoshi-Medium.otf",
+            "./assets/fonts/Satoshi-Regular.otf"
           ]
         }
       ]
@@ -42,7 +42,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -50,6 +52,15 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      },
+      "package": "com.ant1g3n.digitalenergymobile"
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "74ba25e7-76d5-4088-b99d-2cb04f717291"
       }
     }
   }
